--- a/Day4/.vscode/launch.json
+++ b/Day4/.vscode/launch.json
@@ -5,14 +5,14 @@
    "version": "0.2.0",
    "configurations": [
         {
-            "name": "Launch Day1",
+            "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Day1/bin/Debug/netcoreapp3.1/main.dll",
+            "program": "${workspaceFolder}/bin/Debug/net5.0/Day4.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Day1",
+            "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
